# temporal

./: .bedrock_agentcore.yaml  .gitignore  BEDROCK_AGENTCORE_GUIDE.md  ENDPOINT_DOCUMENTATION.md  README.md  SEO_Analysis_Galapagos_Surfing_Expeditions.md  agent.py  agent_old.py  conversation.py  gateway_lambda_proxy.py  lambda-tools-schema.json  pyproject.toml
.bedrock_agentcore/agent/: dependencies.hash
.bedrock_agentcore/tempoWhatsapp/: dependencies.hash
.bedrock_agentcore/tempobook/: dependencies.hash
